[gd_scene load_steps=3 format=3 uid="uid://e9kq5wxgameover"]

[ext_resource type="Script" path="res://overlays/GameOverMenu.gd" id="1_gameover"]
[ext_resource type="PackedScene" uid="uid://b9kq8wxbhbtn1" path="res://widgets/UIButton.tscn" id="2_uibtn"]

[node name="GameOverMenu" type="CanvasLayer"]
script = ExtResource("1_gameover")

[node name="OverlayBackground" type="ColorRect" parent="."]
offset_right = 1080.0
offset_bottom = 1920.0
color = Color(0.2, 0, 0, 0.85)

[node name="MenuContainer" type="VBoxContainer" parent="."]
offset_left = 240.0
offset_top = 550.0
offset_right = 840.0
offset_bottom = 1350.0
theme_override_constants/separation = 25

[node name="TitleLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "üíÄ GAME OVER üíÄ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "FINAL SCORE: 0"
horizontal_alignment = 1

[node name="RankLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "NEW HIGH SCORE #1!"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BtnNewGame" parent="MenuContainer/ButtonsContainer" instance=ExtResource("2_uibtn")]
layout_mode = 2
custom_minimum_size = Vector2(400, 91)
text = "üéÆ NEW GAME"

[node name="BtnMenu" parent="MenuContainer/ButtonsContainer" instance=ExtResource("2_uibtn")]
layout_mode = 2
custom_minimum_size = Vector2(400, 91)
text = "üè† BACK TO MENU"
